2003-07-22  Mark Mitchell  <mark@codesourcery.com>

	* qm/fields.py (Field._GetHtmlFormFieldName): Rename to ...
	(Field.GetHtmlFormFieldName): ... this.
	(IntegerField.FormatValueAsHtml): Adjust accordingly.
	(TextField.FormatValueAsHtml): Likewise.
	(TupleField.FormatValueAsHtml): Likewise.
	(SetField.FormatValueAsHtml): Likewise.
	(SetField.ParseFormValue): Do not validate newly added values.
	(AttachmentField.FormatValueAsHtml): Adjust use of
	_GetHtmlFormFieldName.
	(EnumerationField.FormatValueAsHtml): Likewise.
	(ChoiceField.FormatValueAsHtml): Always have at least one choice.
	(ChoiceField.Validate): New method.
	* qm/test/test.py (Test.arguments): Adjust the test_id field to
	allow creation from the GUI.
	* qm/test/web/web.py (QMTestServer.HandleSubmitItem): Simplify.

	* tests/regress/tuple1: New test.	
	
2003-07-21  Nathaniel Smith  <njs@codesourcery.com>

	* qm/fields.py (TupleField.Validate): Return the computed
	value.

2003-07-21  Vladimir Prus <ghost@cs.msu.su>
	    Mark Mitchell <mark@codesourcery.com>

	* qm/attachment.py (FileAttachmentStore.GetDataFile): Fix typo.
	* tests/regress/attachment1/attachment1: New file.
	* tests/regress/attachment1/results.qmr: Likewise.
	* tests/regress/attachment1/test.qmt: Likewise.
	* tests/regress/attachment1/QMTest/.cvsignore: Likewise.
	* tests/regress/attachment1/QMTest/attachment_test.py: Likewise.
	* tests/regress/attachment1/QMTest/classes.qmc: Likewise.
	* tests/regress/attachment1/QMTest/configuration: Likewise.

2003-07-15  Vladimir Prus <ghost@cs.msu.su>
	    Mark Mitchell <mark@codesourcery.com>

	* qm/attachment.py (AttachmentStore.__init__): Remove.
	(FileAttachmentStore.__init__): New method.
	(FileAttachmentStore.GetDataFile): Support relative paths.
	(TemporaryAttachmentStore.__init__): Adjust accordingly.
	(TemporaryAttachmentStore.GetDataFile): Remove.
	* qm/test/classes/xml_database.py (XMLDatabase.__init__): Use the
	database root when creating the attachment store.
